have all the mod info reference gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,8 @@ projectGroup = dev.tabstats
 # Dependency Properties
 loom.platform = forge
 minecraft.version = 1.8.9
+
+# Mod metadata (used for mcmod.info expansion)
+projectDescription = A forge 1.8.9 mod to check Hypixel player stats directly into your tablist!
+projectUrl = https://github.com/DirectivesMods/TabStats
+projectUpdateUrl = 
