--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,14 @@
-org.gradle.jvmargs=-Xmx2G
+org.gradle.jvmargs=-Xmx2G -Dfile.encoding=UTF-8
+org.gradle.parallel=true
 
-# Project properties
-projectName = TabStats
-projectId = tabstats
-projectVersion = 1.3.0
-projectGroup = dev.tabstats
+projectName=TabStats
+projectId=tabstats
+projectVersion=1.3.0
+projectGroup=dev.tabstats
 
-# Dependency Properties
-loom.platform = forge
-minecraft.version = 1.8.9
+loom.platform=forge
+minecraft.version=1.8.9
 
-# Mod metadata (used for mcmod.info expansion)
-projectDescription = A forge 1.8.9 mod to check Hypixel player stats directly into your tablist!
-projectUrl = https://github.com/DirectivesMods/TabStats
-projectUpdateUrl = 
+projectDescription=A forge 1.8.9 mod to check Hypixel player stats directly into your tablist!
+projectUrl=https://github.com/DirectivesMods/TabStats
+projectUpdateUrl=
